.provarCaches/00D6C0000000xA6UAI/objects/rwscorm__Learning_Course_Item__c.object
<CustomObject>
    <fields>
        <fullName>Dev_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>Dev External ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rwscorm__Course__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Media</label>
        <referenceTo>scormanywhere__Course__c</referenceTo>
        <relationshipLabel>Learning Media Items</relationshipLabel>
        <relationshipName>Learning_Course_Items</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rwscorm__Learning__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Learning</label>
        <referenceTo>redwing__Learning__c</referenceTo>
        <relationshipName>Learning_Course_Items</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rwscorm__Test_Progress__c</fullName>
        <formula>rwscorm__Course__r.scormanywhere__Test_Progress__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Test Progress %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>rwscorm__Test_Score__c</fullName>
        <formula>rwscorm__Course__r.scormanywhere__Test_Score__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Test Score</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rwscorm__Test_Status__c</fullName>
        <formula>rwscorm__Course__r.scormanywhere__Test_Status__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Test Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rwscorm__Test_Transcript__c</fullName>
        <formula>rwscorm__Course__r.scormanywhere__Test_Transcript__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Test Transcript</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rwscorm__Tested_By__c</fullName>
        <formula>rwscorm__Course__r.scormanywhere__Tested_By__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tested By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rwscorm__Tested_Date__c</fullName>
        <formula>rwscorm__Course__r.scormanywhere__Tested_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tested Date</label>
        <type>DateTime</type>
    </fields>
    <label>Learning Media Item</label>
    <nameField>
        <displayFormat>LCI-{0}</displayFormat>
        <label>Learning Media Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Learning Media Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>